--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/styles/all.css" />
+    <link rel="stylesheet" href="./styles/all.css" />
   </head>
   <body>
     <main>
